# DeepH-pack-docs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
deepx/: README.md  __init__.py  _version.py
docs/: .readthedocs.yaml  Makefile  citation.md  citation_and_community.md  conf.py  frequently_asked_questions.md  gen_capabilities.py  gen_examples.py  getting_the_code.md  index.rst  installation_and_setup.md  theoretical_backgrounds.md  universal_material_model.md
docs/configuration_options/: index.rst  inference_toml.md  training_toml.md
docs/core_workflows/: data_preparation.md  index.rst  making_predictions.md  model_training.md
docs/examples/: index.rst
docs/examples/train/H2O-5k.FHI-aims/: demo.ipynb
examples/: README.md
examples/train/H2O-5k.FHI-aims/: demo.ipynb
skills/deepx-training/: CONFIG_TRAIN_DEFAULT.toml  CONFIG_TRAIN_VALID.toml  SKILL.md  dataset_format.md  deeph_install.md  training_toml.md  training_toml_data.md  training_toml_model.md  training_toml_process.md  training_toml_system.md
