[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deepx-pack"
version = "1.0.6.post3"
authors = [
    {name = "DeepH team", email = "deeph-pack@outlook.com"},
]
description = "DeepH-pack is a general-purpose neural network package for deep-learning electronic structure calculations. As the latest evolution of the DeepH framework, it integrates all prior methodologies into a unified, cohesive toolkit. This enhanced version has been fully rebuilt using JAX, delivering greater computational efficiency and expanded functionality."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "DeepH-pack", "DeepH", "Physics", "Deep Learning", "Graph Neural Network", "JAX",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.13,<3.15"
dependencies = [
    "pyarmor==9.1.9",
    "numpy",
    "toml",
    "h5py",
    "matplotlib",
    "joblib",
    "rocksdict",
]

[project.optional-dependencies]
gpu = [
    "torch==2.7.1+cpu",
    "torch_geometric==2.6.1",
    "jax[cuda12]==0.6.2",
    "flax==0.10.6",
    "e3nn-jax==0.20.7",
    "optax==0.2.5",
    "orbax-checkpoint==0.11.16"
]
cpu = [
    "torch==2.7.1+cpu",
    "torch_geometric==2.6.1",
    "jax[cpu]==0.6.2",
    "flax==0.10.6",
    "e3nn-jax==0.20.7",
    "optax==0.2.5",
    "orbax-checkpoint==0.11.16"
]
julia = ["cython", "juliacall"]
mpi = ["mpi4py"]
mpi4jax = ["cython", "mpi4jax==0.7.1"]

docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "ipykernel",
    "myst_nb",
    "nbstripout",
    "recommonmark",
    "ipython_genutils",
    "sphinx-design",
    "jupytext",
    "docutils",
]

[tool.uv.sources]
torch = { index = "pytorch_cpu" }

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[project.scripts]
# Basic Functions
deeph-train = "deepx._info:info"
deeph-infer = "deepx._info:info"
# Toolkit
deeph-Tool-InspectDataset = "deepx._info:info"
deeph-Tool-PlotTrainingProcess = "deepx._info:info"
deeph-Tool-AnalysisModelParams = "deepx._info:info"

[project.urls]
Repository = "https://github.com/kYangLi/DeepH-pack-docs.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepx*"]
exclude = ["docs*", "examples*", "tests*", ".*", "*.egg-info", "build*"]

[tool.setuptools.package-data]
"deepx_dock" = [
    "**/*.toml",
    "**/*.h5",
    "**/*.json",
    "**/*.sh",
    "**/Makefile",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
