[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deepx-pack"
version = "1.2.1"
authors = [
    {name = "DeepH team", email = "deeph-pack@outlook.com"},
]
description = "DeepH-pack is a general-purpose neural network package for deep-learning electronic structure calculations. As the latest evolution of the DeepH framework, it integrates all prior methodologies into a unified, cohesive toolkit. This enhanced version has been fully rebuilt using JAX, delivering greater computational efficiency and expanded functionality."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "DeepH-pack", "DeepH", "Physics", "Deep Learning", "Graph Neural Network", "JAX",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.13,<3.15"
dependencies = [
    "pyarmor==9.1.9",
    "tqdm",
    "numpy",
    "tomli-w",
    "h5py",
    "matplotlib",
    "joblib",
    "rocksdict",
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]==0.8.0",
    "flax==0.12.0",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.26"
]
cuda13 = [
    "jax[cuda13]==0.8.0",
    "flax==0.12.0",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.26"
]
cuda12 = [
    "jax[cuda12]==0.8.0",
    "flax==0.12.0",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.26"
]
cuda12-stable = [
    "jax[cuda12]==0.7.0",
    "flax==0.11.2",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.25"
]
cpu = [
    "jax[cpu]==0.8.0",
    "flax==0.12.0",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.26"
]
cpu-stable = [
    "jax[cpu]==0.7.0",
    "flax==0.11.2",
    "e3nn-jax==0.20.8",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.26"
]
julia = ["cython", "juliacall"]
mpi = ["mpi4py"]
mpi4jax = ["cython", "mpi4jax==0.8.1"]


[project.scripts]
# Basic Functions
deeph-train = "deepx._info:info"
deeph-infer = "deepx._info:info"
# Toolkit
deeph-Tool-InspectDataset = "deepx._info:info"
deeph-Tool-PlotTrainingProcess = "deepx._info:info"
deeph-Tool-AnalysisModelParams = "deepx._info:info"

[project.urls]
Repository = "https://github.com/kYangLi/DeepH-pack-docs.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepx*"]
exclude = [
    "docs*", "examples*", "tests*", ".*", "*.egg-info", "build*",
    "opencode_skill*"
]

[tool.setuptools.package-data]
"deepx_dock" = [
    "**/*.toml",
    "**/*.h5",
    "**/*.json",
    "**/*.sh",
    "**/Makefile",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
